kubernetes/apps/kube-system/cilium/app/networks.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.kubernetes.io/hostname: cluster.tholinka.dev
    lbipam.cilium.io/ips: 192.168.21.2, fd83:43a4:6dab:21::2
spec:
  type: LoadBalancer
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: PreferDualStack
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
