kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Cilium Hubble
    gethomepage.dev/icon: cilium.svg
    gethomepage.dev/pod-selector: app.kubernetes.io/name=hubble-ui
spec:
  hostnames:
    - hubble.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
